# seismic-revm-inspectors

./: Cargo.toml  README.md  cliff.toml
.github/: CODEOWNERS
.github/workflows/: seismic.yml
src/: lib.rs  transfer.rs
src/tracing/: mod.rs  mux.rs  types.rs  writer.rs
src/tracing/builder/: geth.rs  parity.rs
src/tracing/js/: bindings.rs  mod.rs
tests/it/: geth.rs  parity.rs  writer.rs
tests/it/writer/test_trace_printing/: 2.bytecodes.storage.decoded.txt  2.storage.decoded.txt  2.storage.txt  4.bytecodes.storage.txt  4.storage.decoded.txt  7.bytecodes.storage.decoded.txt  7.bytecodes.storage.txt  7.storage.decoded.txt  7.storage.txt  8.bytecodes.storage.decoded.txt  8.bytecodes.storage.txt  8.storage.decoded.txt
