[package]
name = "revm-inspectors"
description = "Seismic Revm inspector implementations"
version = "0.13.0"
edition = "2021"
rust-version = "1.81.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/SeismicSystems/seismic-revm-inspectors"
repository = "https://github.com/SeismicSystems/seismic-revm-inspectors"
categories = ["cryptography"]
keywords = ["ethereum", "evm", "inspectors", "tracing", "debugging"]
exclude = [
    ".github",
    "scripts",
    "testdata",
    "tests",
    "cliff.toml",
    "deny.toml",
    "release.toml",
]

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"
rustdoc.all = "warn"
clippy.lint_groups_priority = "allow"

[dependencies]
# eth
alloy-rpc-types-eth = "0.8"
alloy-rpc-types-trace = "=0.8.0"
alloy-sol-types = "0.8"
alloy-primitives = { version = "0.8", features = ["map"] }
revm = "18.0.0"
revm-primitives = "14.0.0"

anstyle = "1.0"
colorchoice = "1.0"
thiserror = "2.0"

# serde
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = "1.0"

# js-tracer
boa_engine = { version = "0.19", optional = true }
boa_gc = { version = "0.19", optional = true }

[dev-dependencies]
snapbox = { version = "0.6", features = ["term-svg"] }

[features]
serde = ["dep:serde", "revm/serde"]
js-tracer = ["dep:boa_engine", "dep:boa_gc"]

[patch.crates-io]
revm = { git = "https://github.com/SeismicSystems/seismic-revm.git", rev = "771e0af" }
revm-primitives = { git = "https://github.com/SeismicSystems/seismic-revm.git", rev = "771e0af"}

alloy-primitives = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "5dc07cc" }
alloy-json-abi = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "5dc07cc" }
alloy-sol-macro-expander = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "5dc07cc" }
alloy-sol-macro-input = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "5dc07cc" }
alloy-sol-types = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "5dc07cc" }
alloy-sol-type-parser = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "5dc07cc" }
alloy-dyn-abi = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "5dc07cc" }

alloy-consensus = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "65cc029" }
alloy-eips = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "65cc029" }
alloy-network-primitives = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "65cc029" }
alloy-rpc-types-eth = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "65cc029" }
alloy-rpc-types-trace = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "65cc029" }
alloy-serde = { git = "https://github.com/SeismicSystems/seismic-alloy.git", rev = "65cc029" }

seismic-enclave = { git = "https://github.com/SeismicSystems/enclave.git", rev = "3f47bf1" }
