[package]
name = "revm-inspectors"
description = "Seismic Revm inspector implementations"
version = "0.22.3"
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/SeismicSystems/seismic-revm-inspectors"
repository = "https://github.com/SeismicSystems/seismic-revm-inspectors"
categories = ["cryptography"]
keywords = ["ethereum", "evm", "inspectors", "tracing", "debugging"]
exclude = [
    ".github",
    "scripts",
    "testdata",
    "tests",
    "cliff.toml",
    "deny.toml",
    "release.toml",
]

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"
rustdoc.all = "warn"
clippy.lint_groups_priority = "allow"

[dependencies]
# eth
alloy-rpc-types-eth = { version = "1.0", default-features = false }
alloy-rpc-types-trace = { version = "1.0", default-features = false }
alloy-sol-types = { version = "1.0", default-features = false }
alloy-primitives = { version = "1.0", default-features = false, features = [
    "map",
] }
revm = { version = "23.1.0", default-features = false }

anstyle = { version = "1.0", optional = true }
colorchoice = "1.0"
thiserror = { version = "2.0", default-features = false }

# serde
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# js-tracer
boa_engine = { version = "0.20", optional = true }
boa_gc = { version = "0.20", optional = true }

[dev-dependencies]
snapbox = { version = "0.6", features = ["term-svg"] }

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "anstyle/std",
    "serde/std",
    "serde_json/std",
    "revm/std",
    "thiserror/std",
]
serde = ["dep:serde", "revm/serde"]
js-tracer = ["dep:boa_engine", "dep:boa_gc"]

[patch.crates-io]
revm = { git = "https://github.com/SeismicSystems/seismic-revm.git", rev = "8450eab" }
revm-primitives = { git = "https://github.com/SeismicSystems/seismic-revm.git", rev = "8450eab"}

alloy-primitives = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "ab2208a" }
alloy-json-abi = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "ab2208a" }
alloy-sol-macro-expander = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "ab2208a" }
alloy-sol-macro-input = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "ab2208a" }
alloy-sol-types = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "ab2208a" }
alloy-sol-type-parser = { git = "https://github.com/SeismicSystems/seismic-alloy-core.git", rev = "ab2208a" }
